# python_package_starter

./: .env  .gitignore  LICENSE  Pipfile  README.md  setup.cfg  setup.py
.github/: unit-testing.yml
.github/workflows/: unit-tests.yml
docs/: conf.py  index.rst  modules.rst
src/sample_pck/: __init__.py  animals.py  entry_points.py
tests/: conftest.py  test_animals.py  test_curves.py
