# inspired by 
# https://github.com/pallets/flask/blob/master/setup.cfg
# https://github.com/pypa/sampleproject/blob/master/setup.py

[metadata]
# Pypi Metadata
name = sample_pck
version = attr: sample_pck.__version__
url = https://github.com/pypa/sampleproject

project_urls = 
    Source Code = https://github.com/pypa/sampleproject/
    Bug Reports = https://github.com/pypa/sampleproject/issues
    Donate = https://donate.pypi.org
license = BSD-3-Clause
author = Lukas Seppelfricke
author_email = data.puzzler@gmail.com
description = A Python Package Development Starter
long_description = file: README.md 
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9

    Intended Audience :: Developers
    Topic :: Software Development
keywords=package development template

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.9
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src


[tool:pytest]
testpaths = tests
filterwarnings =
    error

[flake8]
# Code Linting config
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80